# LLM-fingerprints

./: .gitignore  README.md  embeddings.ipynb  pyproject.toml  train.ipynb  train_test.ipynb
blackbox_lora_analysis/: analyze_umap_cluster.py
code/: .gitignore  batch_distill_pairwise.py  batch_generate_distillation_data.py  fingerprint.py  generate_ood_prompts.py  generate_training_data.py  generate_training_data_anthropic.py  generate_training_data_oai.py  knowledge_distillation.py  models.json  ood_prompts.json
code/fingerprints_output/: 01-ai_Yi-1.5-6B.json  EleutherAI_pythia-2.8b.json  Qwen_Qwen1.5-MoE-A2.7B.json  Qwen_Qwen2.5-1.5B.json  Qwen_Qwen2.5-3B.json  all_fingerprints_20251025_212944.json  all_fingerprints_20251025_221142.json  allenai_OLMo-2-0425-1B.json  deepseek-ai_deepseek-coder-6.7b-base.json  fingerprints.json  meta-llama_Llama-3.2-1B.json  meta-llama_Llama-3.2-3B.json
encoding_model_analysis/: accuracy_vs_seqlen.py  analyze_latent_embedding.py  embeddings.ipynb  embeddings_seqlen.ipynb  get_latent_embedding.py
encoding_model_analysis/encoding_data/: Qwen_Qwen1.5-MoE-A2.7B_embeddings.npz  Qwen_Qwen1.5-MoE-A2.7B_metadata.csv  Qwen_Qwen2.5-1.5B_embeddings.npz
notebooks/: exploration.ipynb
training_data/: claude_3_5_haiku_20241022_metadata.json  claude_opus_4_1_20250805_metadata.json  claude_sonnet_4_5_20250929_metadata.json  gpt_3.5_turbo_0125_metadata.json  gpt_3.5_turbo_1106_metadata.json  gpt_4.1_2025_04_14_metadata.json  gpt_4.1_metadata.json
utils/: __init__.py  api_cost_tracker.py  hf_models.py  llm_api.py
(+138 files in other folders)
