[project]
name = "model-fingerprints"
version = "0.1.0"
description = "Model fingerprinting using out-of-distribution prompts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "anthropic>=0.7.0",
    "openai>=1.0.0",
    "numpy>=1.24.0",
    "hf-transfer>=0.1.0",
    "datasets>=4.4.1",
    "peft>=0.18.0",
    "trl>=0.25.1",
    "accelerate>=1.12.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["utils"]
